--- a/ptm.html
+++ b/ptm.html
@@ -34,16 +34,15 @@ animation: AnimationName 12s ease infinite;">
             Project
         </div>
 
-        <div class="learningOutcome">
+        <div id="learningOutcome">
             <h1 style="text-align: center;font-style: 40px;">Learning Outcome</h1>
-            <p style="text-align: center;">You deliver complete media products for your client that meet the client’s needs.</p>
+            <p style="text-align: center;">Ability to deliver complete media products for your client that meet the
+                client’s needs.</p>
         </div>
 
         <section id="content">
-                <p>[Learning outcome placeholder]</p>
-                <article id="ptmprologue"></article>
             <article id="artistic_exploration">
-                <h2 style="font-size: 40px;margin:0px;">Artistic Exploration</h2>
+                <h2 style="font-size: 40px;margin-bottom:0px;">Artistic Exploration</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
                 <p>The goal of this sprint is to get to know our client. As a starting point, we made a general summary
                     to get the overview of our client.
@@ -55,6 +54,23 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+            <article>
+                <h2 style="font-size: 40px;margin-bottom: 0;">AR Filter</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
+                <p>Artificial Reality have always been in my intrest and during this sprint i was able to make an end product in the form of an AR filter(hosted in Snapchat) for the client.</p>
+                <p>Attached below is the scan code for the AR filter. By scanning it using the Snapchat app, you will able to preview the AR filter for yourself on your personal phone. 
+                </p>
+                <div class="contentPlaceholder" style="text-align: center;">
+                    <img style="width: 25%;height: auto;margin-top: 4vw;" src="content/scanCodeAR.png"><br/>
+                    <a
+                        href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=a57c53fa34444780a3efee374229967c&metadata=01">Snapchat AR filter</a>
+                </div>
+            </article>
+            <div class="feedback">
+                <h1>Feedback</h1>
+                <!-- <img src="" class="feedbackThumbnail"></img> -->
+                <p style="font-style: italic;">"No feedback provided yet."</p>
+            </div>
         </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
