--- a/sco.html
+++ b/sco.html
@@ -33,29 +33,28 @@ animation: AnimationName 12s ease infinite;">
             Strategy & Concept
         </div>
 
-        <div class="learningOutcome">
+        <div id="learningOutcome">
             <h1 style="text-align: center;font-style: 40px;">Learning Outcome</h1>
-            <p style="text-align: center;">A. You develop a consistent and distinctive brand strategy and visual
+            <p style="text-align: center;">A. Ability to develop a consistent and distinctive brand strategy and visual
                 identity based on target audience analysis.</p>
-            <p style="text-align: center;">B. You create media products for your client by using experiments, iterations
+            <p style="text-align: center;">B. Ability to create media products for your client by using experiments,
+                iterations
                 and examples from the professional field.</p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div><br />
 
+        <div class="contentDivider">
+            <h1 style="text-align:center;font-style:italic;font-size: 40px;">Strategy</h1>
+        </div>
+
         <section id="content">
-            <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Strategy</h1>
             <article id="TargetAudience">
                 <h2 style="font-style: bold;font-size: 40px;margin:0px;">Target Audience</h4>
                     <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
 
                     <p>When it comes to branding a musician, it's imperative to know who the 'target audience' is, and
                         how to reach them. In order to get the general idea of the target audience, 'personas' can be
-                        <div class="learningOutcome">
-                            <h1 style="text-align: center;">Learning Outcome</h1>
-                            <p style="text-align: center;">You design prototypes and user research, based on preselected
-                                methodologies and on user consults.</p>
-                            <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
-                        </div> used to visualize the target audience. </p>
+                        used to visualize the target audience. </p>
                     <!-- <p>In this assignment i have made a few personas(in
                         chronological order) of one of my groupmates, my personal favorite artist, and the target
                         audience of the client.</p> -->
@@ -70,7 +69,7 @@ animation: AnimationName 12s ease infinite;">
                         <p style="font-style: italic;">No feedback provided yet.</p>
                     </div>
             </article>
-            <article id="strategy_analysis">
+            <!--<article id="strategy_analysis">
                 <h2 style="font-size:40px;margin:0px;">Strategy Analysis</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
@@ -119,13 +118,16 @@ animation: AnimationName 12s ease infinite;">
                     <h1>Feedback</h1>
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
-            </article>
+            </article>-->
             <br />
-            <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Concepting</h1>
+        </section><br/>
+        <div class="contentDivider">
+            <h1 style="text-align:center;font-style:italic;font-size: 40px;margin: 20px 0px 0px 0px;">Concept</h1>
+        </div>
+        <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Visual Association</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-
                 <p>Visual Association is a way to analyse on how visual images communicate a
                     message and how images correlates to each other.</p>
                 <p>In this assigment i had to search for two different images and to visually associate them in terms of
@@ -137,7 +139,7 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <article>
+            <!--<article>
                 <h2 style="font-size: 40px;margin:0px;">Brand Value</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
                 <p>...</p>
@@ -165,7 +167,6 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <!-- <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Magazine Layout</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
@@ -184,7 +185,7 @@ animation: AnimationName 12s ease infinite;">
                     <h1>Feedback</h1>
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
-            </article>
+            </article>-->
         </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
