--- a/ux.html
+++ b/ux.html
@@ -34,9 +34,9 @@ animation: AnimationName 12s ease infinite;">
             UX
         </div>
 
-        <div class="learningOutcome">
+        <div id="learningOutcome">
             <h1 style="text-align: center;font-size: 40px;">Learning Outcome</h1>
-            <p style="text-align: center;">You design prototypes and user research, based on preselected methodologies
+            <p style="text-align: center;">Ability to design prototypes and user research, based on preselected methodologies
                 and on user consults. </p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div><br />
@@ -107,7 +107,7 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <article id="task_analysis">
+            <!--<article id="task_analysis">
                 <h2 style="font-size:40px;margin:0px;">Task Analysis</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
@@ -136,7 +136,7 @@ animation: AnimationName 12s ease infinite;">
                     <h1>Feedback</h1>
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
-            </article>
+            </article>-->
         </section><br />
         <div class="contentDivider">
             <h1 style="text-align:center;font-style:italic;font-size: 40px;">Prototype</h1>
@@ -156,17 +156,7 @@ animation: AnimationName 12s ease infinite;">
                         I now know that a storyboard can be a useful tool for UX design.</p>
                 </div>
             </article>
-            <article id="paper_prototype">
-                <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="arduino_workshop">
+            <!--<article id="arduino_workshop">
                 <h2 style="font-size:40px;margin:0px;">Arduino Workshop</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
@@ -195,7 +185,7 @@ animation: AnimationName 12s ease infinite;">
                     <h1>Feedback</h1>
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
-            </article>
+            </article>-->
     </div>
     </article>
     <!-- <article>
