--- a/dev.html
+++ b/dev.html
@@ -33,16 +33,17 @@ animation: AnimationName 12s ease infinite;">
         <div id="title">
             Development
         </div>
-        <div class="learningOutcome">
+        <div id="learningOutcome">
             <h1 style="text-align: center;font-size: 40px;">Learning Outcome</h1>
-            <p style="text-align: center;">You develop media products by programming and integrating proofs of concepts
+            <p style="text-align: center;">Ability to develop media products by programming and integrating proofs of
+                concepts
                 based on validated requirements.</p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div><br />
         <section id="content">
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
             <article>
-                <h2 style="font-size: 40px;margin:0px;">Learning About Front-End Web Development Basics</h2>
+                <h2 style="font-size: 40px;margin-bottom: 0;">Learning About Front-End Web Development Basics</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
                 <p>Since before the semester starts i have been
                     preparing and learning the basics of Front-End Web Development which consist of HTML(Hyper Text
@@ -57,7 +58,7 @@ animation: AnimationName 12s ease infinite;">
                 <p style="font-style: italic;">No feedback provided yet.</p>
             </div>
             <article>
-                <h2 style="font-size: 40px;margin:0px;">Source Control, A Life Saving Tool</h2>
+                <h2 style="font-size: 40px;margin-bottom: 0;">Source Control, A Life Saving Tool</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
                 <p>As i progress further in my development, things started to get much more complex. During this time i
                     needed something to manage, organize, and keep track of my syntax. By using GIT i am able to keep
@@ -68,7 +69,7 @@ animation: AnimationName 12s ease infinite;">
                 <p style="font-style: italic;">No feedback provided yet.</p>
             </div>
             <article>
-                <h2 style="font-size: 40px;margin:0px;">Honing JavaScript</h2>
+                <h2 style="font-size: 40px;margin-bottom: 0;">Honing JavaScript</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
                 <p>JavaScript was my first scripting language that i ever learnt. I know how important JavaScript is in
                     a web development enviroment as it is one of the most popular and widely used programming languanges
@@ -86,19 +87,30 @@ animation: AnimationName 12s ease infinite;">
                 <p style="font-style: italic;">"No feedback provided yet."</p>
             </div>
             <article>
-                <h2 style="font-size: 40px;margin:0px;">Sassy Cascading Style Sheets</h2>
+                <h2 style="font-size: 40px;margin-bottom: 0;">SCSS</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>SCSS stands for Sassy Cascading Style Sheet which is a CSS pre-processor. With SCSS i have the
+                    ability to reduce the repetition of code and therefore saves time. I also find it very helpful to
+                    have additional features such as importing additional SCSS to make a more comprehensive development.
+                </p>
             </article>
             <div class="feedback">
                 <h1>Feedback</h1>
                 <!-- <img src="" class="feedbackThumbnail"></img> -->
                 <p style="font-style: italic;">"I managed to learn SCSS within a week after asking Erik of its
-                    functionality as i find it to be super useful tool."</p>
+                    functionality as i find it to be a very useful tool."</p>
             </div>
-            <!-- <article>
-                <h2 style="font-style: italic;font-size: 40px;margin:0px;">Lorem</h2>
-            </article> -->
+            <article>
+                <h2 style="font-size: 40px;margin-bottom: 0;">Responsive Web Design</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
+                <p>Nowadays people uses many forms of digital devices to open websites. Sometimes you open a website on a PC and other times on your personal phone. But when viewing a website on a smaller screen real estate the website needs to scale accordingly otherwise the elements will clip.
+                </p><p>In this sprint i have implemented a responsive design to this portofolio. Now it can be viewed properly on either big or small screen sizes.</p>
+            </article>
+            <div class="feedback">
+                <h1>Feedback</h1>
+                <!-- <img src="" class="feedbackThumbnail"></img> -->
+                <p style="font-style: italic;">"No feedback provided yet."</p>
+            </div>
         </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
