updated content and minor improvements

--- a/dev.html
+++ b/dev.html
@@ -28,23 +28,26 @@ animation: AnimationName 12s ease infinite;">
             </button>
         </header>
 
-        <iframe class="visualiframe" src="visual3.html" frameborder="0" style="position: fixed;"></iframe>
+        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
-            Development
+            <h2 id="titleText">Development</h1>
         </div>
+        <br />
         <div id="learningOutcome">
-            <h1 style="text-align: center;font-size: 40px;">Learning Outcome</h1>
+            <h2 style="text-align: center;font-size: 40px;">Learning Outcome</h2>
             <p style="text-align: center;">Ability to develop media products by programming and integrating proofs of
                 concepts
                 based on validated requirements.</p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
-        </div><br />
+        </div>
+        <br/>
+
         <section id="content">
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">Learning About Front-End Web Development Basics</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
                 <p>Since before the semester starts i have been
                     preparing and learning the basics of Front-End Web Development which consist of HTML(Hyper Text
                     Markup Language) as the backbone of any website process, CSS(Cascading Style Sheets) to control
