--- a/ptm.html
+++ b/ptm.html
@@ -31,14 +31,15 @@ animation: AnimationName 12s ease infinite;">
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
-            Project
-        </div>
+            <h2 id="titleText">Project</h2>
+        </div><br/>
 
         <div id="learningOutcome">
             <h1 style="text-align: center;font-style: 40px;">Learning Outcome</h1>
-            <p style="text-align: center;">Ability to deliver complete media products for your client that meet the
-                client’s needs.</p>
+            <p style="text-align: center;">Ability to deliver complete media products for the client that meets their needs.</p>
         </div>
+
+        <br/>
 
         <section id="content">
             <article id="artistic_exploration">
@@ -54,23 +55,40 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">AR Filter</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
-                <p>Artificial Reality have always been in my intrest and during this sprint i was able to make an end product in the form of an AR filter(hosted in Snapchat) for the client.</p>
-                <p>Attached below is the scan code for the AR filter. By scanning it using the Snapchat app, you will able to preview the AR filter for yourself on your personal phone. 
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
+                <p>Artificial Reality have always been in my intrest and during this sprint i was able to make an end
+                    product in the form of an AR filter(hosted in Snapchat) for the client.</p>
+                <p>Attached below is the scan code for the AR filter. By scanning it using the Snapchat app, you will
+                    able to preview the AR filter for yourself on your personal phone.
                 </p>
                 <div class="contentPlaceholder" style="text-align: center;">
-                    <img style="width: 25%;height: auto;margin-top: 4vw;" src="content/scanCodeAR.png"><br/>
+                    <img style="width: 25%;height: auto;margin-top: 4vw;" src="content/scanCodeAR.png"><br />
                     <a
-                        href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=a57c53fa34444780a3efee374229967c&metadata=01">Snapchat AR filter</a>
+                        href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=a57c53fa34444780a3efee374229967c&metadata=01">Snapchat
+                        AR filter</a>
+                </div>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <!-- <img src="" class="feedbackThumbnail"></img> -->
+                    <p style="font-style: italic;">"No feedback provided yet."</p>
                 </div>
             </article>
-            <div class="feedback">
-                <h1>Feedback</h1>
-                <!-- <img src="" class="feedbackThumbnail"></img> -->
-                <p style="font-style: italic;">"No feedback provided yet."</p>
-            </div>
+
+            <article>
+                <h2 style="font-size: 40px;margin-bottom: 0;">The Escape Room</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
+                    accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <!-- <img src="" class="feedbackThumbnail"></img> -->
+                    <p style="font-style: italic;">"No feedback provided yet."</p>
+                </div>
+            </article>
+
         </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
