--- a/ux.html
+++ b/ux.html
@@ -28,21 +28,22 @@ animation: AnimationName 12s ease infinite;">
             </button>
         </header>
 
-        <iframe class="visualiframe" src="visual2.html" frameborder="0" style="position: fixed;"></iframe>
+        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
-            UX
-        </div>
+            <h2 id="titleText">User Experience Design</h1>
+        </div><br />
 
         <div id="learningOutcome">
-            <h1 style="text-align: center;font-size: 40px;">Learning Outcome</h1>
+            <h2 style="text-align: center;font-size: 40px;">Learning Outcome</h2>
             <p style="text-align: center;">Ability to design prototypes and user research, based on preselected methodologies
                 and on user consults. </p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
-        </div><br />
+        </div>
+        <br/>
 
         <div class="contentDivider">
-            <h1 style="text-align:center;font-style:italic;font-size: 40px;">Research</h1>
+            <h1 style="text-align:center;font-size: 40px;">Research</h1>
         </div>
 
         <section id="content">
@@ -79,8 +80,8 @@ animation: AnimationName 12s ease infinite;">
                 </article>
             </section> -->
             <article id="interview">
-                <h2 style="font-size:40px;margin:0px;">The Interview</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <h1 style="font-size:40px;margin:0px;">The Interview</h1>
+                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
                 <h2 style="margin:0px;">Interview Preparation</h2>
                 <p></p>
                 <p>The purpose of the interview is to find out the needs of the client's target audience. This can
@@ -107,44 +108,17 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <!--<article id="task_analysis">
-                <h2 style="font-size:40px;margin:0px;">Task Analysis</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="card_sorting">
-                <h2 style="font-size:40px;margin:0px;">Card Sorting</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="user_test">
-                <h2 style="font-size:40px;margin:0px;">User Test</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>-->
-        </section><br />
+        </section>
+
+        <br />
+
         <div class="contentDivider">
-            <h1 style="text-align:center;font-style:italic;font-size: 40px;">Prototype</h1>
+            <h1 style="text-align:center;font-size: 40px;">Prototype</h1>
         </div>
         <section id="content">
             <article id="storyboard">
                 <h2 style="font-size:40px;margin:0px;">Storyboard</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
                 <p>A storyboard was originally used for the film industry. In designing user experience it is used as a
                     tool to visualize an idea or a concept, to describe the context use of a product, and to show the
                     emotional appeal of the product.</p>
