--- a/sco.html
+++ b/sco.html
@@ -27,30 +27,34 @@ animation: AnimationName 12s ease infinite;">
             </button>
         </header>
 
-        <iframe class="visualiframe" src="visual3.html" frameborder="0" style="position: fixed;"></iframe>
+        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
-            Strategy & Concept
+            <h2 id="titleText">Strategy & Concepting</h2>
         </div>
 
+        <br/>
+
         <div id="learningOutcome">
-            <h1 style="text-align: center;font-style: 40px;">Learning Outcome</h1>
+            <h2 style="text-align: center;font-style: 40px;">Learning Outcome</h2>
             <p style="text-align: center;">A. Ability to develop a consistent and distinctive brand strategy and visual
                 identity based on target audience analysis.</p>
             <p style="text-align: center;">B. Ability to create media products for your client by using experiments,
                 iterations
                 and examples from the professional field.</p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
-        </div><br />
+        </div>
+
+        <br/>
 
         <div class="contentDivider">
-            <h1 style="text-align:center;font-style:italic;font-size: 40px;">Strategy</h1>
+            <h1 style="text-align:center;font-size: 40px;">Strategy</h1>
         </div>
 
         <section id="content">
             <article id="TargetAudience">
-                <h2 style="font-style: bold;font-size: 40px;margin:0px;">Target Audience</h4>
-                    <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <h1 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Target Audience</h4>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
 
                     <p>When it comes to branding a musician, it's imperative to know who the 'target audience' is, and
                         how to reach them. In order to get the general idea of the target audience, 'personas' can be
@@ -69,64 +73,47 @@ animation: AnimationName 12s ease infinite;">
                         <p style="font-style: italic;">No feedback provided yet.</p>
                     </div>
             </article>
-            <!--<article id="strategy_analysis">
-                <h2 style="font-size:40px;margin:0px;">Strategy Analysis</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
+            <article id="cjm">
+                <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Customer Journey Map</h4>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
+                    <p> The customer journey is the complete
+                        sum of experiences that customers go through when interacting with a company and or a brand. In
+                        this case, an artist.</p>
+                    <!-- <p>In this assignment i have made a few personas(in
+                        chronological order) of one of my groupmates, my personal favorite artist, and the target
+                        audience of the client.</p> -->
+                    <!-- <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
+                    <a href="" style="color: grey;">Target audience exercise 2</a>
+                    <a href="" style="color: grey;">Target audience exercise 3</a> -->
+                    <p>In this assignment i have made a customer journey map of the client.</p>
+                    <img class="contentAttachment" src="content/CJM.png" alt="Missing file">
+                    <p>The CJM above describes the states of how the customer would react to the artist, in more detail:</p>
+                    <h2 style="margin-bottom: 0;">Awareness</h2>
+                    <p style="margin:0;">In the awareness phase the customer would have been aware of the artist by
+                        social means.</p>
+                    <h2 style="margin-bottom: 0;">Interest</h2>
+                    <p style="margin:0;">The customer would have grown interest on the artist and would have decided to see more of the artist content.</p>
+                    <h2 style="margin-bottom: 0;">Consideration</h2>
+                    <p style="margin:0;">In this phase, the customer would have to consider whether or not to invest more in this artist depending each to individual taste and if the customer likes the artist enough they probably would want to see them first hand.</p>
+                    <h2 style="margin-bottom: 0;">Purchase</h2>
+                    <p style="margin:0;">The customer would have been intrigued of the artist and would decide to buy the merchandise of the artist.</p>
+                    <h2 style="margin-bottom: 0;">Advocacy</h2>
+                    <p style="margin:0;">The customer would have become a fan and shares the artist music to friends and relatives.</p>
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <p style="font-style: italic;">No feedback provided yet.</p>
+                    </div>
             </article>
-            <article id="customer_journey">
-                <h2 style="font-size:40px;margin:0px;">Customer Journey</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="brand_value">
-                <h2 style="font-size:40px;margin:0px;">Brand Value</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="brand_guide">
-                <h2 style="font-size:40px;margin:0px;">Brand Guide</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="onlinemediastrategy">
-                <h2 style="font-size:40px;margin:0px;">Online Media Strategy</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>-->
-            <br />
-        </section><br/>
+        </section>
+        
+        <br />
+
         <div class="contentDivider">
-            <h1 style="text-align:center;font-style:italic;font-size: 40px;margin: 20px 0px 0px 0px;">Concept</h1>
+            <h1 style="text-align:center;font-size: 40px;margin: 20px 0px 0px 0px;">Concept</h1>
         </div>
         <section id="content">
             <article>
-                <h2 style="font-size: 40px;margin:0px;">Visual Association</h2>
+                <h2 style="font-size: 40px;margin-bottom:0px;">Visual Association</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
                 <p>Visual Association is a way to analyse on how visual images communicate a
                     message and how images correlates to each other.</p>
@@ -139,60 +126,12 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <!--<article>
-                <h2 style="font-size: 40px;margin:0px;">Brand Value</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
-                <p>...</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article>
-                <h2 style="font-size: 40px;margin:0px;">Colour</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
-                <p>...</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="logo_design">
-                <h2 style="font-size:40px;margin:0px;">Logo Design</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article>
-                <h2 style="font-size: 40px;margin:0px;">Magazine Layout</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
-                <p>...</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="interaction_design">
-                <h2 style="font-size:40px;margin:0px;">Interaction Design</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>-->
         </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
-        <!-- <a href="" style="color: grey;">Development[WIP]</a> -->
         <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
         <a href="ptm.html">Project</a>
@@ -203,8 +142,6 @@ animation: AnimationName 12s ease infinite;">
     <script src="js/OrbitControls.js"></script>
     <script src="js/main.js"></script>
     <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
-
-
 </body>
 
 </html>
