--- a/dev.html
+++ b/dev.html
@@ -58,6 +58,7 @@ animation: AnimationName 12s ease infinite;">
             </article>
             <div class="feedback">
                 <h1>Feedback</h1>
+                <div class="plus-minus-toggle collapsed"></div>
                 <p style="font-style: italic;">No feedback provided yet.</p>
             </div>
             <article>
