poc fully funtional and minor adjustments
minor tweak for the overlay menu

--- a/dev.html
+++ b/dev.html
@@ -17,10 +17,8 @@ background-size: 400% 400%;
 -moz-animation: AnimationName 12s ease infinite;
 -o-animation: AnimationName 12s ease infinite;
 animation: AnimationName 12s ease infinite;">
-    <div id="main">
-
-        <!-- BODY HEADER____________________________________________________________________________________________________________ -->
-        <header>
+        
+        <header id="main">
             <button class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -41,7 +39,7 @@ animation: AnimationName 12s ease infinite;">
                 based on validated requirements.</p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div>
-        <br/>
+        <br />
 
         <section id="content">
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
@@ -55,12 +53,12 @@ animation: AnimationName 12s ease infinite;">
                     presentation aspect of the site, and JavaScript to transform a static HTML page into a dynamic
                     interface.
                 </p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: block; font-style: italic;">No feedback provided yet.</p>
+                </div>
             </article>
-            <div class="feedback">
-                <h1>Feedback</h1>
-                <div class="plus-minus-toggle collapsed"></div>
-                <p style="font-style: italic;">No feedback provided yet.</p>
-            </div>
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">Source Control, A Life Saving Tool</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
@@ -107,8 +105,12 @@ animation: AnimationName 12s ease infinite;">
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">Responsive Web Design</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
-                <p>Nowadays people uses many forms of digital devices to open websites. Sometimes you open a website on a PC and other times on your personal phone. But when viewing a website on a smaller screen real estate the website needs to scale accordingly otherwise the elements will clip.
-                </p><p>In this sprint i have implemented a responsive design to this portofolio. Now it can be viewed properly on either big or small screen sizes.</p>
+                <p>Nowadays people uses many forms of digital devices to open websites. Sometimes you open a website on
+                    a PC and other times on your personal phone. But when viewing a website on a smaller screen real
+                    estate the website needs to scale accordingly otherwise the elements will clip.
+                </p>
+                <p>In this sprint i have implemented a responsive design to this portofolio. Now it can be viewed
+                    properly on either big or small screen sizes.</p>
             </article>
             <div class="feedback">
                 <h1>Feedback</h1>
@@ -116,7 +118,6 @@ animation: AnimationName 12s ease infinite;">
                 <p style="font-style: italic;">"No feedback provided yet."</p>
             </div>
         </section>
-    </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
